Add Formspree form integration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Marstrandsparkering.se – Hyra parkering i Marstrand</title>
+<title>Marstrandsparkering.se â Hyra parkering i Marstrand</title>
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,300;0,9..144,600;0,9..144,700;1,9..144,300&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css"/>
 <style>
@@ -87,15 +87,15 @@
 <body>
 <nav>
   <div class="logo">Marstrand<span>sparkering</span></div>
-  <a href="#anmal">Anmäl intresse</a>
+  <a href="#anmal">AnmÃ¤l intresse</a>
 </nav>
 <section class="hero">
   <div class="hero-left">
-    <span class="hero-tag">🌊 Marstrand · Sommaren 2026</span>
-    <h1>Din <em>tomma</em> p-plats är någons räddning</h1>
-    <p>Hyr ut din parkeringsplats när du inte använder den – och låt besökare till Marstrand slippa leta i timmar. Enkelt, tryggt och lönsamt.</p>
+    <span class="hero-tag">ð Marstrand Â· Sommaren 2026</span>
+    <h1>Din <em>tomma</em> p-plats Ã¤r nÃ¥gons rÃ¤ddning</h1>
+    <p>Hyr ut din parkeringsplats nÃ¤r du inte anvÃ¤nder den â och lÃ¥t besÃ¶kare till Marstrand slippa leta i timmar. Enkelt, tryggt och lÃ¶nsamt.</p>
     <div class="hero-cta">
-      <a href="#anmal" class="btn-primary">Anmäl ditt intresse</a>
+      <a href="#anmal" class="btn-primary">AnmÃ¤l ditt intresse</a>
       <a href="#hur" class="btn-secondary">Hur fungerar det?</a>
     </div>
   </div>
@@ -105,12 +105,12 @@
       <div class="map-overlay"></div>
     </div>
     <div class="float-card float-card-1">
-      <div class="card-label"><span class="dot"></span>Tillgänglig nu</div>
+      <div class="card-label"><span class="dot"></span>TillgÃ¤nglig nu</div>
       <div class="card-value">Marstrand Hamn</div>
-      <div class="card-sub">150 kr / dag · 50 m från bryggan</div>
+      <div class="card-sub">150 kr / dag Â· 50 m frÃ¥n bryggan</div>
     </div>
     <div class="float-card float-card-2">
-      <div class="card-label">Intjänat denna sommar</div>
+      <div class="card-label">IntjÃ¤nat denna sommar</div>
       <div class="card-value">4 200 kr</div>
       <div class="card-sub">av Anna, Marstrand</div>
     </div>
@@ -121,30 +121,30 @@
 </section>
 <section class="section" id="hur">
   <div class="section-label">Hur det fungerar</div>
-  <h2 class="section-title">Tre steg – sedan sköter sig resten</h2>
-  <p class="section-sub">Marstrandsparkering.se är designat för att vara så enkelt som möjligt – för både den som hyr ut och den som söker en trygg parkering i Marstrand.</p>
+  <h2 class="section-title">Tre steg â sedan skÃ¶ter sig resten</h2>
+  <p class="section-sub">Marstrandsparkering.se Ã¤r designat fÃ¶r att vara sÃ¥ enkelt som mÃ¶jligt â fÃ¶r bÃ¥de den som hyr ut och den som sÃ¶ker en trygg parkering i Marstrand.</p>
   <div class="steps-grid">
-    <div class="step"><div class="step-number">1</div><div class="step-icon">📍</div><h3>Lägg upp din plats</h3><p>Berätta om din parkeringsplats – var den ligger, hur den ser ut, och vilket pris du vill ha per dag.</p></div>
-    <div class="step"><div class="step-number">2</div><div class="step-icon">📅</div><h3>Blockera dina egna tider</h3><p>Välj enkelt vilka dagar du själv behöver platsen. Resten av dagarna är automatiskt tillgängliga för uthyrning.</p></div>
-    <div class="step"><div class="step-number">3</div><div class="step-icon">💰</div><h3>Pengarna trillar in</h3><p>Betalning sker direkt i appen. Du får utbetalning enkelt och smidigt – utan krångel.</p></div>
+    <div class="step"><div class="step-number">1</div><div class="step-icon">ð</div><h3>LÃ¤gg upp din plats</h3><p>BerÃ¤tta om din parkeringsplats â var den ligger, hur den ser ut, och vilket pris du vill ha per dag.</p></div>
+    <div class="step"><div class="step-number">2</div><div class="step-icon">ð</div><h3>Blockera dina egna tider</h3><p>VÃ¤lj enkelt vilka dagar du sjÃ¤lv behÃ¶ver platsen. Resten av dagarna Ã¤r automatiskt tillgÃ¤ngliga fÃ¶r uthyrning.</p></div>
+    <div class="step"><div class="step-number">3</div><div class="step-icon">ð°</div><h3>Pengarna trillar in</h3><p>Betalning sker direkt i appen. Du fÃ¥r utbetalning enkelt och smidigt â utan krÃ¥ngel.</p></div>
   </div>
 </section>
 <section class="benefits-section" id="fordelar">
-  <div class="section-label">Fördelar</div>
-  <h2 class="section-title">Bra för alla</h2>
-  <p class="section-sub">Oavsett om du äger en parkeringsplats i Marstrand eller ska besöka ön – vi gör sommaren lite enklare.</p>
+  <div class="section-label">FÃ¶rdelar</div>
+  <h2 class="section-title">Bra fÃ¶r alla</h2>
+  <p class="section-sub">Oavsett om du Ã¤ger en parkeringsplats i Marstrand eller ska besÃ¶ka Ã¶n â vi gÃ¶r sommaren lite enklare.</p>
   <div class="benefits-grid">
-    <div class="benefit-card"><span class="benefit-tag tag-owner">För dig som hyr ut</span><div class="benefit-icon">🏡</div><h3>Tjäna pengar på det du inte använder</h3><p>Din förhyrda p-plats kostar pengar varje månad. Med Marstrandsparkering.se kan du få tillbaka en del av den kostnaden – eller mer.</p></div>
-    <div class="benefit-card"><span class="benefit-tag tag-owner">För dig som hyr ut</span><div class="benefit-icon">🔒</div><h3>Du bestämmer alltid</h3><p>Du väljer själv vilka dagar platsen är tillgänglig. Blockera dagarna med ett knapptryck – resten sköts automatiskt.</p></div>
-    <div class="benefit-card"><span class="benefit-tag tag-visitor">För dig som söker parkering</span><div class="benefit-icon">🗺️</div><h3>Sluta cirkla runt</h3><p>Boka en garanterad plats nära dit du ska, redan innan du åker hemifrån. Inga överraskningar, ingen stress.</p></div>
-    <div class="benefit-card"><span class="benefit-tag tag-visitor">För dig som söker parkering</span><div class="benefit-icon">💳</div><h3>Enkelt och tryggt</h3><p>Betala direkt i appen. Du vet exakt var du ska parkera och vad det kostar.</p></div>
+    <div class="benefit-card"><span class="benefit-tag tag-owner">FÃ¶r dig som hyr ut</span><div class="benefit-icon">ð¡</div><h3>TjÃ¤na pengar pÃ¥ det du inte anvÃ¤nder</h3><p>Din fÃ¶rhyrda p-plats kostar pengar varje mÃ¥nad. Med Marstrandsparkering.se kan du fÃ¥ tillbaka en del av den kostnaden â eller mer.</p></div>
+    <div class="benefit-card"><span class="benefit-tag tag-owner">FÃ¶r dig som hyr ut</span><div class="benefit-icon">ð</div><h3>Du bestÃ¤mmer alltid</h3><p>Du vÃ¤ljer sjÃ¤lv vilka dagar platsen Ã¤r tillgÃ¤nglig. Blockera dagarna med ett knapptryck â resten skÃ¶ts automatiskt.</p></div>
+    <div class="benefit-card"><span class="benefit-tag tag-visitor">FÃ¶r dig som sÃ¶ker parkering</span><div class="benefit-icon">ðºï¸</div><h3>Sluta cirkla runt</h3><p>Boka en garanterad plats nÃ¤ra dit du ska, redan innan du Ã¥ker hemifrÃ¥n. Inga Ã¶verraskningar, ingen stress.</p></div>
+    <div class="benefit-card"><span class="benefit-tag tag-visitor">FÃ¶r dig som sÃ¶ker parkering</span><div class="benefit-icon">ð³</div><h3>Enkelt och tryggt</h3><p>Betala direkt i appen. Du vet exakt var du ska parkera och vad det kostar.</p></div>
   </div>
 </section>
 <section class="signup-section" id="anmal">
   <div class="signup-inner">
-    <div class="section-label" style="text-align:center">Kom med från start</div>
-    <h2 class="section-title">Anmäl ditt intresse</h2>
-    <p class="section-sub">Vi lanserar Marstrandsparkering.se inför sommaren 2026. Fyll i formuläret så hör vi av oss.</p>
+    <div class="section-label" style="text-align:center">Kom med frÃ¥n start</div>
+    <h2 class="section-title">AnmÃ¤l ditt intresse</h2>
+    <p class="section-sub">Vi lanserar Marstrandsparkering.se infÃ¶r sommaren 2026. Fyll i formulÃ¤ret sÃ¥ hÃ¶r vi av oss.</p>
     <form action="https://formspree.io/f/jesper@speedshine.se" method="POST">
       <div class="form-row">
         <div class="form-group"><input type="text" name="namn" placeholder="Ditt namn" required></div>
@@ -152,21 +152,21 @@
       </div>
       <div class="form-group">
         <select name="intresse" required>
-          <option value="" disabled selected>Jag är intresserad av att...</option>
+          <option value="" disabled selected>Jag Ã¤r intresserad av att...</option>
           <option value="hyra-ut">Hyra ut min parkeringsplats</option>
-          <option value="boka">Boka parkering som besökare</option>
-          <option value="bada">Båda delar</option>
+          <option value="boka">Boka parkering som besÃ¶kare</option>
+          <option value="bada">BÃ¥da delar</option>
         </select>
       </div>
-      <div class="form-group"><input type="text" name="plats" placeholder="Var bor din parkeringsplats? (t.ex. nära hamnen...)"></div>
-      <button type="submit" class="submit-btn">Anmäl intresse →</button>
-      <p class="form-note">Vi skickar inga spam. Bara ett mejl när vi är redo att lansera.</p>
+      <div class="form-group"><input type="text" name="plats" placeholder="Var bor din parkeringsplats? (t.ex. nÃ¤ra hamnen...)"></div>
+      <button type="submit" class="submit-btn">AnmÃ¤l intresse â</button>
+      <p class="form-note">Vi skickar inga spam. Bara ett mejl nÃ¤r vi Ã¤r redo att lansera.</p>
     </form>
   </div>
 </section>
 <footer>
   <div class="logo">Marstrand<span>sparkering</span></div>
-  <p>© 2026 Marstrandsparkering.se · Parkering i Marstrand</p>
+  <p>Â© 2026 Marstrandsparkering.se Â· Parkering i Marstrand</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
 <script>
